--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Website 1</title>
+<title>Learn Vue</title>
+<meta name="viewport" content="width=device-width;initial-scale=1.0">   
 <script type="text/javascript" src="vue.min.js">
 </script>
 
