--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <blog></blog>
   <br>
   <div>
-    <label for="newColor">Type a color name:</label>
+    <label for="newColor">Type a color name:</label><br>
     <input type="text" v-model="newColor" name="newColor"/>
     <button v-on:click="addColor">Add color</button>
     <ul>
